# analise-tecnica-bolsa

./: .gitignore  Análise_técnica_de_ações.ipynb  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
bronze_data/: coeficientes_modelos.json  setores_filtrados.json  traducao_industria.json  traducao_setor.json
raw_data/: etfsListados.csv  fiisListados.csv  ipca_sidra.csv  lista_setores.csv  lista_setores_traduzido.csv  tickers.csv
src/: analise_setorial.py  atualizar_base_setores.py  baixar_dados.py  criptos.py  importar_fundamentos.py  importar_tickers.py  main.py  modelo_preditivo.py  mostrar_fundamentos.py  painel_lateral.py  plotar_grafico.py  traducao_base.py  tratamento_ativo.py
