[tool.poetry]
name = "analise-tecnica-bolsa"
version = "0.1.0"
description = ""
authors = ["Mateus Pinheiro <mateus.mcpa@gmail.com>"]
readme = "README.md"

packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.11"
matplotlib = "^3.10.3"
pandas = "^2.3.0"
plotly = "^6.1.2"
yfinance = "^0.2.62"
streamlit = "^1.45.1"
scikit-learn = "^1.7.0"
certifi = "^2025.7.9"
curl-cffi = "0.11.3"
googletrans = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
